--- a/WindowsFormsApp2/WindowsFormsApp2.csproj
+++ b/WindowsFormsApp2/WindowsFormsApp2.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Context.cs" />
+    <Compile Include="Expression.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
