dodane expression klase za zbrajanje i brojeve

--- a/WindowsFormsApp2/WindowsFormsApp2.csproj
+++ b/WindowsFormsApp2/WindowsFormsApp2.csproj
@@ -46,7 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BrojExpression.cs" />
     <Compile Include="Context.cs" />
+    <Compile Include="CosinusExpression.cs" />
     <Compile Include="Expression.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -56,6 +58,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VarijablaExpression.cs" />
+    <Compile Include="ZbrojiExpression.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
