--- a/WindowsFormsApp2/ZavrsniRad.csproj
+++ b/WindowsFormsApp2/ZavrsniRad.csproj
@@ -88,5 +88,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\jsribar\DiagramGrid\DiagramGridControl\DiagramGridControl.csproj">
+      <Project>{B44D02C4-C364-4B9A-8069-BADC2D5202E5}</Project>
+      <Name>DiagramGridControl</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
